chore: remove netty warning (#67)