@@ -1,7 +1,7 @@
 FROM europe-north1-docker.pkg.dev/cgr-nav/pull-through/nav.no/jre:openjdk-25
 WORKDIR /app
 COPY build/libs/app.jar app.jar
-ENV JDK_JAVA_OPTIONS="-XX:MaxRAMPercentage=75 -Dlogback.configurationFile=logback.xml"
+ENV JDK_JAVA_OPTIONS="-XX:MaxRAMPercentage=75 -Dlogback.configurationFile=logback.xml --enable-native-access=ALL-UNNAMED"
 ENV TZ="Europe/Oslo"
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
