@@ -20,6 +20,7 @@ version = "1.0.0-SNAPSHOT"
 
 application {
     mainClass = "io.ktor.server.netty.EngineMain"
+    applicationDefaultJvmArgs += "--enable-native-access=ALL-UNNAMED"
 }
 
 kotlin {
